Tue Mar 24 14:44:07 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Catch DatabaseModifiedError in
	  get_metadata(), and reopen and retry.

Wed Mar 11 15:28:38 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,xappy/unittests/general1.py,
	  xappy/unittests/testdata/chert_db/iamchert,
	  xappy/unittests/weight_action.py: Update expected weights in
	  remaining tests, and the format of the sample chert database, to
	  work with new tarballs.  Allows removal of a hacky "2.0" in the
	  weight_action test.

Wed Mar 11 15:20:44 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst: Update with value of
	  get_max_possible_weight() returned by new xapian tarballs; these
	  provide tighter bounds.

Wed Mar 11 15:20:12 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Avoid using deprecated form of
	  set_sort_by_key_then_relevance.

Wed Mar 11 13:52:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update with new packages (core and bindings,
	  old extras packages should be compatible).

Wed Mar 11 11:37:00 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoint numbers.

Fri Mar 06 05:48:28 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/build_xapian.sh,libs/get_xapian.py: Update with new
	  tarballs, and add script to build and install (locally) all the
	  tarballs.

Thu Mar 05 16:20:01 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/distance.py: Fix completely broken distance test.

Thu Mar 05 16:10:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/doctests/searchconnection_doctest2.txt,
	  xappy/unittests/general1.py: Update for new tarballs, and move
	  some tests from doctest to unittest so they can be handled more
	  neatly.
