@@ -1,3 +1,8 @@
+Tue Mar 24 14:48:12 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Catch DatabaseModifiedError in
+	  _load_config() call to get_metadata(), too.
+
 Tue Mar 24 14:44:07 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Catch DatabaseModifiedError in
